Get started with React

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
   <head>
     <title>Proto</title>
+
+    <link rel="stylesheet" href="bower_components/semantic-ui/dist/semantic.css">
+    <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/semantic-ui/dist/semantic.js"></script>
+    <script src="bower_components/prism/prism.js"></script>
+    <script src="bower_components/prism/components/prism-python.js"></script>
+    <script src="bower_components/prism/plugins/highlight-keywords/prism-highlight-keywords.js"></script>
   </head>
   <body>
-    <div id='root'>
+    <div id="root">
     </div>
     <script src="dist/bundle.js"></script>
   </body>
