--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Proto</title>
+    <title>Prototype</title>
 
     <link rel="stylesheet" href="bower_components/semantic-ui/dist/semantic.css">
     <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
