Use react-component slider

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="bower_components/semantic-ui/dist/semantic.css">
     <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
     <link rel="stylesheet" href="bower_components/prism/plugins/line-highlight/prism-line-highlight.css">
+    <link rel="stylesheet" href="node_modules/rc-slider/assets/index.css">
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/main.css">
 
