--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="bower_components/prism/themes/prism.css">
     <link rel="stylesheet" href="bower_components/prism/plugins/line-highlight/prism-line-highlight.css">
     <link rel="stylesheet" href="node_modules/rc-slider/assets/index.css">
+    <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="node_modules/code-mirror-themes/themes/railscasts.css">
+
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/main.css">
