Playing with webpack

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/main.css">
+    <!-- <link rel="stylesheet" href="src/main.css"> -->
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/semantic-ui/dist/semantic.js"></script>
@@ -19,11 +19,13 @@
     <script src="bower_components/prism/components/prism-python.js"></script>
     <script src="bower_components/prism/plugins/highlight-keywords/prism-highlight-keywords.js"></script>
     <script src="bower_components/prism/plugins/line-highlight/prism-line-highlight.js"></script>
+
   </head>
   <body>
     <div id="root">
     </div>
-    <script src="dist/bundle.js"></script>
+    <script src="dist/bower.js"></script>
+    <script src="dist/demo.js"></script>
   </body>
 </html>
 
