--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   <body>
     <div id="root">
     </div>
+
     <script src="dist/bower.js"></script>
-    <script src="dist/demo.js"></script>
+    <script src="dist/index.js"></script>
   </body>
 </html>
 
