Refactoring with redux

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="src/main.css"> -->
+    <link rel="stylesheet" href="client/main.css">
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/semantic-ui/dist/semantic.js"></script>
@@ -26,15 +26,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` in this folder.
-      To create a production bundle, use `npm run build`.
-    -->
+    <script src="bundle.js"></script>
   </body>
 </html>
